syntax = "proto3";

package shorturl.v1;

import "google/protobuf/timestamp.proto";

option go_package = "shorturl/v1";

service URLShortener {
  rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse);
  rpc GetLongURL(GetLongURLRequest) returns (GetLongURLResponse);
}

message CreateShortURLRequest { string longurl = 1; }

message CreateShortURLResponse {
  int64 id = 1;
  string shorturl = 2;
  string createdAt = 3;
}

message GetLongURLRequest { string shorturl = 1; }

message GetLongURLResponse {
  string longurl = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp ttl = 3;
}
